# segnet-ios

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/caffe/: caffe.hpp  common.hpp  data_layers.hpp  data_transformer.hpp
include/caffe/util/: io.hpp  math_functions.hpp  upgrade_proto.hpp
src/caffe/: common.cpp  data_transformer.cpp  net.cpp
src/caffe/layers/: base_data_layer.cpp  reduction_layer.cpp
src/caffe/proto/: caffe.proto
src/caffe/util/: benchmark.cpp  io.cpp  math_functions.cpp  upgrade_proto.cpp
tools/: build_ios.sh  prototxt2bin.py
